Enhanced error management Added some locales Added a new argument for command pvpdatabase